fixed sleep logo on smaller screens
just made it disappear; maybe I'll fix it the css to move it later but disappearing was easier

--- a/css/main.css
+++ b/css/main.css
@@ -152,3 +152,9 @@ hr {
 .footer table td {
   padding-right: 32px;
 }
+
+@media screen and (max-width: 580px) {
+  .footer #sleep-logo {
+    display: none;
+  }
+}
